# staff-performance-evaluation-platform

./: .env  README.md  db.sqlite3  makefile  manage.py  pyproject.toml
designs/: database-design-thinking.md  evaluation-model-db-thinking.md  staff-perfomance-evaluation.xlsx  user-system-diagram.md
evaluation_platform/: asgi.py  settings.py  urls.py  wsgi.py
evaluation_platform/evaluations/: admin.py  apps.py  models.py
evaluation_platform/evaluations/migrations/: 0001_initial.py
evaluation_platform/users/: admin.py  apps.py  models.py  urls.py  views.py
evaluation_platform/users/migrations/: 0001_initial.py  0002_customuser_supervisor.py
evaluation_platform/users/templates/users/: home.html  login.html  profile.html
static/: htmx.v2.0.0.min.js  pico.jade.css
templates/: base.html
