[project]
name = "staff-performance-evaluation-platform"
version = "0.1.0"
description = "A platform used to evaluate staff performance."
authors = [{ name = "Antony Nyagah", email = "tony.m.nyagah@gmail.com" }]
dependencies = ["django>=5.1.1", "python-dotenv[cli]>=1.0.1", "werkzeug>=3.0.4"]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "commitizen>=3.29.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "pytest-xdist>=3.6.1",
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "isort>=5.13.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
